--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,8 +24,9 @@ const { title } = Astro.props;
   </head>
   <body>
     <header>
+      <a href="/"><img src={logo.src} /></a>
       <h1>
-        <a href="/"><img src={logo.src} />Förderverein "Das Baumhaus"</a>
+        <a href="/">Förderverein "Das Baumhaus"</a>
       </h1>
       <nav>
         <ul>
@@ -51,26 +52,35 @@ const { title } = Astro.props;
   </body>
 </html>
 
-<style>
+<style is:global>
   body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     background: #fff8ec;
   }
   header {
     background-color: #1a6062;
     color: white;
     padding: 1rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 10;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    gap: 1rem;
   }
   header img {
     width: 2rem;
   }
   header h1 {
     font-weight: 200;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+    line-height: 1;
+    white-space: nowrap;
+
+    @media screen and (min-width: 32rem) {
+      font-size: 1.5rem;
+    }
   }
   header h1 a {
     display: flex;
@@ -80,21 +90,58 @@ const { title } = Astro.props;
   header h1 img {
     margin-right: 1rem;
   }
+  nav {
+  }
   nav ul {
     display: flex;
     gap: 1rem;
     list-style: none;
     padding: 0;
   }
-  nav li {
+  nav li main {
+    padding: 2rem;
+    background: white;
+    margin-inline: auto;
+    max-width: 60ch;
   }
   main {
+    flex-grow: 1;
     padding: 2rem;
-    max-width: 60ch;
-    margin-inline: auto;
     background: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-inline: auto;
+    max-width: 60ch;
   }
+  main a {
+    text-decoration: underline;
+  }
+  main h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 1;
+    margin-bottom: 0.5rem;
+    color: #1a6062;
+  }
+
+  main img {
+    margin-block: 1rem;
+  }
+
+  main ul {
+    margin-inline: 1rem;
+  }
+
+  main h2 {
+    margin-top: 2rem;
+    margin-bottom: 0.5rem;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+
+  main p,
+  main ul {
+    margin-bottom: 1rem;
+  }
+
   footer {
     background-color: #343434;
     padding: 1rem;
