--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -147,5 +147,6 @@ const { title } = Astro.props;
     padding: 1rem;
     font-size: 0.875rem;
     color: white;
+    text-align: center;
   }
 </style>
