--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,6 +48,7 @@ import ibanSpende from "../assets/iban-spende.png";
       IBAN: DE29 6729 0100 0061 2265 08<br />
       BIC: GENODE61HD3
     </p>
+    <p>Spenden an den Förderverein sind steuerlich absetzbar.</p>
 
     <h2>Der Kindergarten</h2>
     <p>
