--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,15 +1,15 @@
 ---
-import "@effective/css-reset/dist/assets/ResetNative.css";
-import "@effective/css-reset/dist/assets/SensibleEnhancements.css";
-import "@effective/css-reset/dist/assets/ResponsiveType.css";
-import logo from "../assets/logo.svg";
-import favicon from "../assets/favicon.svg";
+import "@effective/css-reset/dist/assets/ResetNative.css"
+import "@effective/css-reset/dist/assets/SensibleEnhancements.css"
+import "@effective/css-reset/dist/assets/ResponsiveType.css"
+import logo from "../assets/logo.svg"
+import favicon from "../assets/favicon.svg"
 
 interface Props {
-  title: string;
+  title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <!doctype html>
@@ -32,6 +32,9 @@ const { title } = Astro.props;
         <ul>
           <li>
             <a href="/">Startseite</a>
+          </li>
+          <li>
+            <a href="/satzung">Satzung</a>
           </li>
           <li>
             <a href="/impressum">Impressum</a>
