fix: enhanced titles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,11 +16,14 @@ const { title } = Astro.props
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Astro description" />
+    <meta
+      name="description"
+      content="Homepage des Förderverein des Evangelischen Kindergartens 'Das Baumhaus' Großsachsen e.V."
+    />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <link rel="shortcut icon" type="" href={favicon.src} />
-    <title>{title}</title>
+    <title>{title} - Förderverein "Das Baumhaus"</title>
   </head>
   <body>
     <header>
