feat: update satzung, images, mdx convert

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Homepage des Förderverein des Evangelischen Kindergartens 'Das Baumhaus' Großsachsen e.V."
+      content="Homepage des Fördervereins des Evangelischen Kindergartens 'Das Baumhaus' Großsachsen e.V."
     />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
