--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,6 +71,15 @@ const { title } = Astro.props
     align-items: center;
     gap: 1rem;
     padding-top: 1rem;
+    background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.7),
+      transparent
+    );
+    box-shadow:
+      rgba(0, 0, 0, 0.2) 0px 3px 3px -2px,
+      rgba(0, 0, 0, 0.14) 0px 3px 4px 0px,
+      rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
   }
   header img {
     max-height: 10rem;
@@ -84,6 +93,11 @@ const { title } = Astro.props
     align-items: center;
     background-color: #8a633d;
     padding: 1rem;
+    background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.1),
+      transparent
+    );
   }
   nav ul {
     display: flex;
@@ -105,24 +119,31 @@ const { title } = Astro.props
   main {
     flex-grow: 1;
     padding-inline: 2rem;
-    padding-bottom: 2rem;
+    padding-block: 2rem;
     background: white;
     margin-inline: auto;
     max-width: 60ch;
+    box-shadow:
+      rgba(0, 0, 0, 0.2) 0px 2px 1px -1px,
+      rgba(0, 0, 0, 0.14) 0px 1px 1px 0px,
+      rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
   }
   main a {
     text-decoration: underline;
+  }
+  main a:hover {
+    color: #108226;
   }
   main h1 {
     font-size: 2rem;
     font-weight: 600;
     line-height: 1;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     margin-bottom: 0.75rem;
     color: #108226;
   }
   main h2 {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     margin-bottom: 0.25rem;
     font-weight: 600;
     text-transform: uppercase;
