--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,11 +5,7 @@ import "@effective/css-reset/dist/assets/ResponsiveType.css"
 import logo from "../assets/logo.svg"
 import favicon from "../assets/favicon.svg"
 
-interface Props {
-  title: string
-}
-
-const { title } = Astro.props
+const { frontmatter } = Astro.props
 ---
 
 <!doctype html>
@@ -23,7 +19,7 @@ const { title } = Astro.props
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <link rel="shortcut icon" type="" href={favicon.src} />
-    <title>{title} - Förderverein "Das Baumhaus"</title>
+    <title>{frontmatter.title} - Förderverein "Das Baumhaus"</title>
   </head>
   <body>
     <header>
@@ -61,6 +57,7 @@ const { title } = Astro.props
     flex-direction: column;
     min-height: 100vh;
     background: #f7f1eb;
+    color: #392b1e;
   }
   header {
     background-color: #e8d0bb;
@@ -165,7 +162,7 @@ const { title } = Astro.props
   footer {
     background-color: #8a633d;
     padding: 1rem;
-    font-size: 0.875rem;
+    font-size: 0.75rem;
     color: white;
     text-align: center;
   }
