--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "@effective/css-reset/dist/assets/ResetNative.css"
 import "@effective/css-reset/dist/assets/SensibleEnhancements.css"
 import "@effective/css-reset/dist/assets/ResponsiveType.css"
 import logo from "../assets/logo.svg"
+import icon from "../assets/icon.svg"
 import favicon from "../assets/favicon.svg"
 
 const { frontmatter } = Astro.props
