fix: updated schriftführer + added paypal spende

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import "@effective/css-reset/dist/assets/ResetNative.css"
-import "@effective/css-reset/dist/assets/SensibleEnhancements.css"
-import "@effective/css-reset/dist/assets/ResponsiveType.css"
+import "@effective/css-reset/reset.css"
+import "@effective/css-reset/enhancement.css"
+import "@effective/css-reset/typography.css"
 import logo from "../assets/logo.svg"
 import icon from "../assets/icon.svg"
 import favicon from "../assets/favicon.svg"
@@ -46,7 +46,7 @@ const { frontmatter } = Astro.props
       <slot />
     </main>
     <footer>
-      Copyright 2024, Förderverein des Evangelischen Kindergartens "Das
+      Copyright 2024-2025, Förderverein des Evangelischen Kindergartens "Das
       Baumhaus" Großsachsen e.V.
     </footer>
   </body>
